<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".resultFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="79dp"
                android:layout_marginTop="86dp"
                android:layout_marginEnd="79dp"
                android:text="@string/score_text"
                android:textSize="70sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/scoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="154dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="155dp"
                android:text="@string/getScore_text"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topic" />

            <Button
                android:id="@+id/playAgain_button"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="79dp"
                android:layout_marginEnd="91dp"
                android:text="@string/playAgain_text"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scoreText" />

            <Button
                android:id="@+id/home_button"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="91dp"
                android:text="@string/home_text"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playAgain_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
