<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".titleFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameTitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="176dp"
                android:layout_marginTop="144dp"
                android:layout_marginEnd="176dp"
                android:text="@string/name_title"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/howto_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/howto_text"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTitle_text" />

            <Button
                android:id="@+id/play_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="161dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="162dp"
                android:background="@android:color/background_dark"
                android:text="@string/play_button_text"
                android:textColor="?attr/colorBackgroundFloating"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTitle_text" />

            <Button
                android:id="@+id/history_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="161dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="162dp"
                android:background="@android:color/background_dark"
                android:text="@string/history_button_text"
                android:textColor="?attr/colorBackgroundFloating"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
